@@ -1,3 +1,8 @@
+Development Portal (2014-11-23 shi)
+==============================
+Changed CSS, layout and text for generator
+
+
 Development Portal (2014-11-21 shi)
 ==============================
 Edited data source in text file
